[package]
name = "csv-tool"
version = "0.1.0"
edition = "2021"
description = "A fast CSV swiss-army knife CLI"
license = "MIT"
authors = ["smolkai <smolkai@users.noreply.github.com>"]
repository = ""
readme = "README.md"

[[bin]]
name = "csv-tool"
path = "src/main.rs"

[lib]
name = "csv_tool"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
# preserve_order keeps JSON object keys in insertion order (via indexmap)
# instead of sorting them alphabetically, so to-json preserves column order
# and a to-json -> from-json round trip is order-stable.
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
